<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MultiCamera" >

   <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:fadingEdge="vertical"
         android:orientation="horizontal" >

         <Button
             android:id="@+id/startRecAll"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/startRecAll" />
         <Button
             android:id="@+id/stopRecAll"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/stopRecAll" />
     
    </LinearLayout>
    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:fadingEdge="vertical"
         android:orientation="horizontal" >

         <Button
             android:id="@+id/cameraPreview1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/cameraPreview1" />

         <Button
             android:id="@+id/cameraPreview2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/cameraPreview2" />

         <Button
             android:id="@+id/cameraPreview3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/cameraPreview3" />

         <Button
             android:id="@+id/cameraPreview4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/cameraPreview4" />
     
     </LinearLayout>
     
  <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_weight="1"
     android:fadingEdge="vertical"
     android:orientation="horizontal" >
         <SurfaceView
             android:id="@+id/surfaceView1"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />

 </LinearLayout>
    


</LinearLayout>
